--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nick Cordy - Portfolio</title>
     <link rel="stylesheet" href="../styles/css/main.css">
-    <script src="../assets/js/main.js" defer></script>
+    <script src="../scripts/js/main.js" defer></script>
 </head>
 <body>
 
