--- a/resume.html
+++ b/resume.html
@@ -6,16 +6,19 @@
     <title>Nick Cordy - Portfolio</title>
     <link rel="stylesheet" href="../styles/css/main.css">
     <script src="../scripts/main.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
-            <span class="navbar-brand">
-                Nick Cordy
-                <span class="navbar-brand-secondary"><a href="index.html">ePortfolio</a></span>
-            </span>
+            <div class="navbar-header">
+                <span class="navbar-brand">
+                    Nick Cordy
+                    <span class="navbar-brand-secondary"><a href="index.html">ePortfolio</a></span>
+                </span>
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
@@ -35,7 +38,6 @@
             </div>
         </div>
     </nav>
-
     <main>
         <div class="container">
         </div>
