--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nick Cordy - Portfolio</title>
     <link rel="stylesheet" href="../styles/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <script src="../scripts/main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" defer></script>
 </head>
@@ -23,16 +24,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Me</a>
+                        <a class="nav-link" href="projects.html">Projects <i class="fa-solid fa-briefcase"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
+                        <a class="nav-link" href="resume.html">Resumé <i class="fa-solid fa-file"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="resume.html">Resume</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact.html">Contact <i class="fa-solid fa-envelope"></i></a>
                     </li>
                 </ul>
             </div>
@@ -40,7 +38,32 @@
     </nav>
     <main>
         <div class="container">
+            <div class="row justify-content-center">
+                <div class="col">
+                    <div class="border-bottom border-5 border-primary">
+                        <h2 class="label label-default">Resumé</h2>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card card-margin-lg">
+                <div class="card-body">
+                    <iframe src="docs/resume.pdf" class="resume-container"></iframe>
+                    <div class="text-center mt-3">
+                        <a href="docs/resume.pdf" class="btn btn-lg" download="Nick_Cordy_resume">Download</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
+
+    <footer class="footer fixed-bottom">
+        <div class="container">
+          <div>
+            <span class="footer-link"><a href="https://www.linkedin.com/in/nick-cordy" target="_blank" title="LinkedIn"><i class="fab fa-linkedin-in footer-i"></i> LinkedIn</a></span>
+            <span class="footer-link"><a href="https://github.com/nickcordy" target="_blank" title="GitHub"><i class="fab fa-github footer-i"></i> GitHub</a></span>
+          </div>
+        </div>
+    </footer>
 </body>
 </html>
